# OpenMopa

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
assets/icons/: openmopa.icns
mopa_luiz/: __init__.py  cli.py  geometry.py  importers.py  layers.py  live.py  profile.py  raster.py  safety.py  ui.py
profiles/: openmopa-machine.ini
scripts/: create_app_icon.py  create_openmopa_assets.py  launcher.applescript
tests/: test_config.py  test_geometry.py  test_importers.py  test_layers.py  test_planner.py  test_raster.py  test_safety.py
