[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openmopa"
version = "0.1.0"
description = "Safety-first open-source MOPA/galvo laser controller prototype."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luiz Bueno" }]
keywords = ["mopa", "galvo", "laser", "jcz", "lmc", "lightburn", "ezcad"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
hardware = ["pyusb"]
dev = []

[project.scripts]
openmopa = "mopa_luiz.cli:main"

[tool.setuptools]
packages = ["mopa_luiz"]
